--- a/index.html
+++ b/index.html
@@ -1,33 +1,184 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Abito</title>
-    <link rel="stylesheet" href="style.css">
-</head>
-<body>
+    <link rel="stylesheet" href="style.css" />
+  </head>
+  <body>
     <header class="header">
-        <div class="container">
-            <div class="header-box">
-                <div class="header-logo">
-                    <img src="./image/logo.svg" alt="logo">
-                    <span>Abito</span>
-                </div>
-                <div class="header-controls">
-                    <button class="btn btn-outline">Вход и регистрация</button>
-                    <button class="btn btn-primary">Подать объявление</button>
-                </div>
+      <div class="container">
+        <div class="header-box">
+          <div class="header-logo">
+            <img src="./image/logo.svg" alt="logo" />
+            <span>Abito</span>
+          </div>
+          <div class="header-controls">
+            <button class="btn btn-outline">Вход и регистрация</button>
+            <button class="btn btn-primary">Подать объявление</button>
+          </div>
 
-                <div class="header-burger">
-                    <img src="./image/burger.svg" alt="burger">
-                </div>
-
-            </div>
-            
+          <div class="header-burger">
+            <img src="./image/burger.svg" alt="burger" />
+          </div>
         </div>
+      </div>
     </header>
-    <div>Search</div>
-    <main>Content</main>
-</body>
+    <main>
+      <section class="search">
+        <div class="container">
+          <div class="search-box">
+            <input type="text" />
+            <button class="btn btn-primary search-btn">
+              <img
+                class="search-btn__icon"
+                src="./image/search.svg"
+                alt="search"
+              />
+              <span class="search-btn__text">Найти</span>
+            </button>
+          </div>
+        </div>
+      </section>
+      <section class="content">
+        <div class="container">
+          <div class="content-box">
+            <div class="content-main">
+              <h2 class="content-main__title">Рекомендации для вас</h2>
+              <div class="content-main__list">
+                <a href="#" class="content-main__list-item">
+                  <div class="content-main__list-item--img">
+                    <img src="./image/card-img.png" alt="card-img" />
+                  </div>
+                  <h5 class="content-main__list-item--title">
+                    Пвх материал 2й сорт
+                  </h5>
+                  <strong class="content-main__list-item--price">
+                    170 ₽
+                  </strong>
+
+                  <div class="content-main__list-item--desc-box">
+                    <span class="content-main__list-item--desc"
+                      >Казань, р-н Вахитовский</span
+                    >
+                    <span class="content-main__list-item--desc"
+                      >10 июля 11:39</span
+                    >
+                  </div>
+                </a>
+                <a href="#" class="content-main__list-item">
+                  <div class="content-main__list-item--img">
+                    <img src="./image/card-img.png" alt="card-img" />
+                  </div>
+                  <h5 class="content-main__list-item--title">
+                    Пвх материал 2й сорт
+                  </h5>
+                  <strong class="content-main__list-item--price">
+                    170 ₽
+                  </strong>
+
+                  <div class="content-main__list-item--desc-box">
+                    <span class="content-main__list-item--desc"
+                      >Казань, р-н Вахитовский</span
+                    >
+                    <span class="content-main__list-item--desc"
+                      >10 июля 11:39</span
+                    >
+                  </div> </a
+                ><a href="#" class="content-main__list-item">
+                  <div class="content-main__list-item--img">
+                    <img src="./image/card-img.png" alt="card-img" />
+                  </div>
+                  <h5 class="content-main__list-item--title">
+                    Пвх материал 2й сорт
+                  </h5>
+                  <strong class="content-main__list-item--price">
+                    170 ₽
+                  </strong>
+
+                  <div class="content-main__list-item--desc-box">
+                    <span class="content-main__list-item--desc"
+                      >Казань, р-н Вахитовский</span
+                    >
+                    <span class="content-main__list-item--desc"
+                      >10 июля 11:39</span
+                    >
+                  </div> </a
+                ><a href="#" class="content-main__list-item">
+                  <div class="content-main__list-item--img">
+                    <img src="./image/card-img.png" alt="card-img" />
+                  </div>
+                  <h5 class="content-main__list-item--title">
+                    Пвх материал 2й сорт
+                  </h5>
+                  <strong class="content-main__list-item--price">
+                    170 ₽
+                  </strong>
+
+                  <div class="content-main__list-item--desc-box">
+                    <span class="content-main__list-item--desc"
+                      >Казань, р-н Вахитовский</span
+                    >
+                    <span class="content-main__list-item--desc"
+                      >10 июля 11:39</span
+                    >
+                  </div> </a
+                ><a href="#" class="content-main__list-item">
+                  <div class="content-main__list-item--img">
+                    <img src="./image/card-img.png" alt="card-img" />
+                  </div>
+                  <h5 class="content-main__list-item--title">
+                    Пвх материал 2й сорт
+                  </h5>
+                  <strong class="content-main__list-item--price">
+                    170 ₽
+                  </strong>
+
+                  <div class="content-main__list-item--desc-box">
+                    <span class="content-main__list-item--desc"
+                      >Казань, р-н Вахитовский</span
+                    >
+                    <span class="content-main__list-item--desc"
+                      >10 июля 11:39</span
+                    >
+                  </div> </a
+                ><a href="#" class="content-main__list-item">
+                  <div class="content-main__list-item--img">
+                    <img src="./image/card-img.png" alt="card-img" />
+                  </div>
+                  <h5 class="content-main__list-item--title">
+                    Пвх материал 2й сорт
+                  </h5>
+                  <strong class="content-main__list-item--price">
+                    170 ₽
+                  </strong>
+
+                  <div class="content-main__list-item--desc-box">
+                    <span class="content-main__list-item--desc"
+                      >Казань, р-н Вахитовский</span
+                    >
+                    <span class="content-main__list-item--desc"
+                      >10 июля 11:39</span
+                    >
+                  </div>
+                </a>
+              </div>
+            </div>
+            <div class="content-side">
+              <h3 class="content-side__title">Сервисы и услуги</h3>
+              <div class="content-side-box">
+                <div class="content-side__list">
+                  <div class="content-side__list-item">
+                    <img class="content-side__list-item--img" src="" alt="" />
+                    <h5 class="content-side__list-item--title"></h5>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+    </main>
+  </body>
 </html>
