Lesson 4 + Roboto-font

--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
     <header class="header">
       <div class="container">
         <div class="header-box">
-          <div class="header-logo">
+          <a href="/" class="header-logo">
             <img src="./image/logo.svg" alt="logo" />
             <span>Abito</span>
-          </div>
+          </a>
           <div class="header-controls">
             <button class="btn btn-outline">Вход и регистрация</button>
             <button class="btn btn-primary">Подать объявление</button>
@@ -47,7 +47,7 @@
             <div class="content-main">
               <h2 class="content-main__title">Рекомендации для вас</h2>
               <div class="content-main__list">
-                <a href="#" class="content-main__list-item">
+                <a href="/product.html" class="content-main__list-item">
                   <div class="content-main__list-item--img">
                     <img src="./image/card-img.png" alt="card-img" />
                   </div>
@@ -67,7 +67,7 @@
                     >
                   </div>
                 </a>
-                <a href="#" class="content-main__list-item">
+                <a href="/product.html" class="content-main__list-item">
                   <div class="content-main__list-item--img">
                     <img src="./image/card-img.png" alt="card-img" />
                   </div>
@@ -86,7 +86,7 @@
                       >10 июля 11:39</span
                     >
                   </div> </a
-                ><a href="#" class="content-main__list-item">
+                ><a href="/product.html" class="content-main__list-item">
                   <div class="content-main__list-item--img">
                     <img src="./image/card-img.png" alt="card-img" />
                   </div>
@@ -105,7 +105,7 @@
                       >10 июля 11:39</span
                     >
                   </div> </a
-                ><a href="#" class="content-main__list-item">
+                ><a href="/product.html" class="content-main__list-item">
                   <div class="content-main__list-item--img">
                     <img src="./image/card-img.png" alt="card-img" />
                   </div>
@@ -124,7 +124,7 @@
                       >10 июля 11:39</span
                     >
                   </div> </a
-                ><a href="#" class="content-main__list-item">
+                ><a href="/product.html" class="content-main__list-item">
                   <div class="content-main__list-item--img">
                     <img src="./image/card-img.png" alt="card-img" />
                   </div>
@@ -143,7 +143,7 @@
                       >10 июля 11:39</span
                     >
                   </div> </a
-                ><a href="#" class="content-main__list-item">
+                ><a href="/product.html" class="content-main__list-item">
                   <div class="content-main__list-item--img">
                     <img src="./image/card-img.png" alt="card-img" />
                   </div>
@@ -170,9 +170,57 @@
               <div class="content-side-box">
                 <div class="content-side__list">
                   <div class="content-side__list-item">
-                    <img class="content-side__list-item--img" src="" alt="" />
-                    <h5 class="content-side__list-item--title"></h5>
+                    <img
+                      class="content-side__list-item--img"
+                      src="./image/side-info-1.svg"
+                      alt="side-info-1"
+                    />
+                    <h5 class="content-side__list-item--title">Доставка</h5>
+                    <p class="content-side__list--item--text">
+                      Проверка при получении и возможность бесплатно вернуть
+                      товар
+                    </p>
                   </div>
+                  <div class="content-side__list-item">
+                    <img
+                      class="content-side__list-item--img"
+                      src="./image/side-info-2.svg"
+                      alt="side-info-2"
+                    />
+                    <h5 class="content-side__list-item--title">Автотека</h5>
+                    <p class="content-side__list--item--text">
+                      Отчёт с историей авто: пробег, владельцы, сведения о
+                      залоге, ДТП и ремонтах
+                    </p>
+                  </div>
+
+                  <div class="content-side__list-item">
+                    <img
+                      class="content-side__list-item--img"
+                      src="./image/side-info-3.svg"
+                      alt="side-info-3"
+                    />
+                    <h5 class="content-side__list-item--title">
+                      Онлайн-бронирование жилья
+                    </h5>
+                    <p class="content-side__list--item--text">
+                      Посуточная аренда квартир и домов: большой выбор вариантов
+                      для поездок по России
+                    </p>
+                  </div>
+                </div>
+
+                <div class="content-side__footer">
+                  <p class="content-side__footer--item">
+                    © ООО «Абито», 2011–2021
+                  </p>
+
+                  <a href="#" class="content-side__footer--item">
+                    Политика конфиденциальности
+                  </a>
+                  <a href="#" class="content-side__footer--item">
+                    Обработка данных
+                  </a>
                 </div>
               </div>
             </div>
