--- a/index.html
+++ b/index.html
@@ -3,8 +3,10 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Abito</title>
     <link rel="stylesheet" href="style.css" />
+    <script src="./script.js" defer></script>
+    <title>Abito</title>
+    
   </head>
   <body>
     <header class="header">
@@ -47,7 +49,7 @@
             <div class="content-main">
               <h2 class="content-main__title">Рекомендации для вас</h2>
               <div class="content-main__list">
-                <a href="/product.html" class="content-main__list-item">
+                <!-- <a href="/product.html" class="content-main__list-item">
                   <div class="content-main__list-item--img">
                     <img src="./image/card-img.png" alt="card-img" />
                   </div>
@@ -162,7 +164,7 @@
                       >10 июля 11:39</span
                     >
                   </div>
-                </a>
+                </a> -->
               </div>
             </div>
             <div class="content-side">
